--- a/Artari_skiing.ipynb
+++ b/Artari_skiing.ipynb
@@ -567,7 +567,11 @@
       "Epoch 13/30\n",
       "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0555 - val_loss: 2.8903 - val_accuracy: 0.0588\n",
       "Epoch 14/30\n",
-      "1406/1407 [============================>.] - ETA: 0s - loss: 2.8904 - accuracy: 0.0571"
+      "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0571 - val_loss: 2.8903 - val_accuracy: 0.0588\n",
+      "Epoch 15/30\n",
+      "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0560 - val_loss: 2.8902 - val_accuracy: 0.0589\n",
+      "Epoch 16/30\n",
+      " 624/1407 [============>.................] - ETA: 40s - loss: 2.8896 - accuracy: 0.0591"
      ]
     }
    ],
