--- a/Artari_skiing.ipynb
+++ b/Artari_skiing.ipynb
@@ -93,7 +93,7 @@
     "        tf.keras.layers.Flatten(),\n",
     "        tf.keras.layers.Dense(units=32,activation='relu'),\n",
     "        tf.keras.layers.Dropout(rate=0.3),\n",
-    "        tf.keras.layers.Dense(18,activation='softmax')\n",
+    "        tf.keras.layers.Dense(1,activation='linear')\n",
     "    ])\n",
     "model.compile(optimizer=tf.optimizers.Adam(), \n",
     "              loss='sparse_categorical_crossentropy', \n",
@@ -571,7 +571,13 @@
       "Epoch 15/30\n",
       "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0560 - val_loss: 2.8902 - val_accuracy: 0.0589\n",
       "Epoch 16/30\n",
-      " 624/1407 [============>.................] - ETA: 40s - loss: 2.8896 - accuracy: 0.0591"
+      "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8903 - accuracy: 0.0574 - val_loss: 2.8903 - val_accuracy: 0.0589\n",
+      "Epoch 17/30\n",
+      "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0576 - val_loss: 2.8902 - val_accuracy: 0.0589\n",
+      "Epoch 18/30\n",
+      "1407/1407 [==============================] - 83s 59ms/step - loss: 2.8904 - accuracy: 0.0567 - val_loss: 2.8903 - val_accuracy: 0.0589\n",
+      "Epoch 19/30\n",
+      " 956/1407 [===================>..........] - ETA: 23s - loss: 2.8904 - accuracy: 0.0570"
      ]
     }
    ],
